added css for one-pot-pasta using flexbox. Made the website prettier overall with color

--- a/dishes/One-Pot-Pasta/One-Pot-Pasta.html
+++ b/dishes/One-Pot-Pasta/One-Pot-Pasta.html
@@ -1,30 +1,47 @@
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style.css">
+    <title>One Pot Pasta</title>
+</head>
+
 <body>
-    <h1>One Pot Pasta</h1>
-    <p>My Cooking:</p>
-    <img src="./One-Pot-Pasta.jpg" alt="One-Pot-Pasta" width="300" height="auto">
-
-    <p>Ingredients</p>
-    <ul>
-        <li>12 ounces linguine</li>
-        <li>12 ounces cherry or grade tomatoes, halved or quartered if large</li>
-        <li>1 onion, thinly sliced (about 2 cups)</li>
-        <li>4 cloves garlic, thinly sliced</li>
-        <li>½ teaspoon red-pepper flakes</li>
-        <li>2 sprigs basil, plus torn leaves for garnish</li>
-        <li>2 tablespoons extra virgin olive oil, plus more for serving</li>
-        <li>Coarse salt and freshly ground pepper</li>
-        <li>4 ½ cups water</li>
-    </ul>
-
-    <p>Directions</p>
-    <ol>
-        <li>Combine pasta, tomatoes, onion, garlic, red-pepper flakes, basil, oil, 2 teaspoons salt, ¼
-            teaspoon pepper and water in a large straight-sided skillet. Bring to a boil over high heat.</li>
-        <li>Boil mixture, stirring and turning pasta frequently with tongs, until pasta is al dente and
-            water has nearly evaporated, about 9 minutes.</li>
-        <li>Season to taste with salt and pepper, divide among 4 bowls, and garnish with basil. Serve
-            with oil and Parmesan.</li>
-    </ol>
+    <h1 id="title">One Pot Pasta</h1>
+    <div class="flex-container">
+        <div class="picture">
+            <p>My Cooking:</p>
+            <img src="./One-Pot-Pasta.jpg" alt="One-Pot-Pasta" width="300" height="auto">
+        </div>
+        <div class="Ingredients">
+            <p>Ingredients</p>
+            <ul>
+                <li>12 ounces linguine</li>
+                <li>12 ounces cherry or grade tomatoes, halved or quartered if large</li>
+                <li>1 onion, thinly sliced (about 2 cups)</li>
+                <li>4 cloves garlic, thinly sliced</li>
+                <li>½ teaspoon red-pepper flakes</li>
+                <li>2 sprigs basil, plus torn leaves for garnish</li>
+                <li>2 tablespoons extra virgin olive oil, plus more for serving</li>
+                <li>Coarse salt and freshly ground pepper</li>
+                <li>4 ½ cups water</li>
+            </ul>
+        </div>
+        <div id="empty"></div>
+        <div class="Directions">
+            <p>Directions</p>
+            <ol>
+                <li>Combine pasta, tomatoes, onion, garlic, red-pepper flakes, basil, oil, 2 teaspoons salt, ¼
+                    teaspoon pepper and water in a large straight-sided skillet. Bring to a boil over high heat.</li>
+                <li>Boil mixture, stirring and turning pasta frequently with tongs, until pasta is al dente and
+                    water has nearly evaporated, about 9 minutes.</li>
+                <li>Season to taste with salt and pepper, divide among 4 bowls, and garnish with basil. Serve
+                    with oil and Parmesan.</li>
+            </ol>
+        </div>
+    </div>
 
     <a href="../../index.html">Return to main page.</a>
 
