--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
     <title>My Cookings</title>
 </head>
+
 <body>
     <h1>Welcome to My Website</h1>
     <p id="Introduction">This website consists of list of food I have made in my journey to learn how to cook and make delicious food.</p>
-    <ul>
-        <!--List of Foods-->
-        <li> <a href="dishes/One-Pot-Pasta/One-Pot-Pasta.html"> One Pot Pasta</a> </li>
-        
-    </ul>
+
+    <!--List of Foods-->
+    <a href="dishes/One-Pot-Pasta/One-Pot-Pasta.html"> One Pot Pasta</a>
+
 </body>
+
 </html>
