added new recipe

--- a/index.html
+++ b/index.html
@@ -13,8 +13,12 @@
     <p id="Introduction">This website consists of list of food I have made in my journey to learn how to cook and make delicious food.</p>
 
     <!--List of Foods-->
-    <a href="dishes/One-Pot-Pasta/One-Pot-Pasta.html"> One Pot Pasta</a>
-
+    <ul>
+        <li><a href="dishes/One-Pot-Pasta/One-Pot-Pasta.html"> One Pot Pasta</a></li>
+        <li><a href="dishes/Roasted-Tomato,Fresh-Mozzarella-and-Basil-Sheet-Pan-Pizza/recipe.html">Roasted Tomato, Fresh Mozzarella and Basil Sheet Pan Pizza</a></li>
+    </ul>
+    
+    
 </body>
 
 </html>
