--- a/dishes/Roasted-Tomato,Fresh-Mozzarella-and-Basil-Sheet-Pan-Pizza/recipe.html
+++ b/dishes/Roasted-Tomato,Fresh-Mozzarella-and-Basil-Sheet-Pan-Pizza/recipe.html
@@ -12,37 +12,39 @@
     <div class="flex-container">
         <div class="description">
             <h1 id="title">Roasted Tomato, Fresh Mozzarella and Basil Sheet Pan Pizza</h1>
+            <img src="./food.jpg" alt="Pizza" width="500px" height="auto">
         </div>
-
-        <div class="Ingredients">
-            <h2>Ingredients</h2>
-            <ul>
-                <li>2 plum tomatoes, halved length wise, cores and seeds removed</li>
-                <li>4 tablespoons good olive oil</li>
-                <li>1 ½ teaspoons balsamic vinegar</li>
-                <li>2 large garlic cloves, minced</li>
-                <li>2 teaspoons sugar</li>
-                <li>1 ½ teaspoons kosher salt</li>
-                <li>½ teaspoon freshly ground pepper</li>
-                <li>1 lb Fresh mozzarella, torn into bite size pieces</li>
-                <li>1 bunch Basil, chiffonaded</li>
-            </ul>
-        </div>
-        <div class="Directions">
-            <h2>Directions</h2>
-            <ol>
-                <li>Preheat the oven to 450 degrees F.</li>
-                <li>Arrange the tomatoes on a sheet pan, cut side up, in a single layer. Drizzle with olive oil
-                    and balsamic vinegar. Sprinkle the garlic, sugar, salt and pepper over the tomatoes. Roast
-                    for 25 to 30 minutes, until the tomatoes are concentrated and begin to caramelize.</li>
-                <li>Roll pizza dough into two large rectangle and place on two greased ¼ sheet pans.</li>
-                <li>Break up the roasted tomatoes to make a chunky sauce and spread over the top of each
-                    dough.</li>
-                <li>Sprinkle evenly with the fresh mozzarella.</li>
-                <li>Bake, rotating baking pans as needed, until the bottom crust is light brown.</li>
-                <li>Remove from the oven and wearing gloves, generously sprinkle with chiffonade of basil.</li>
-                <li>Let cool slightly and slice into rectangles for serving.</li>
-            </ol>
+        <div class="content">
+            <div class="Ingredients">
+                <h2>Ingredients</h2>
+                <ul>
+                    <li>2 plum tomatoes, halved length wise, cores and seeds removed</li>
+                    <li>4 tablespoons good olive oil</li>
+                    <li>1 ½ teaspoons balsamic vinegar</li>
+                    <li>2 large garlic cloves, minced</li>
+                    <li>2 teaspoons sugar</li>
+                    <li>1 ½ teaspoons kosher salt</li>
+                    <li>½ teaspoon freshly ground pepper</li>
+                    <li>1 lb Fresh mozzarella, torn into bite size pieces</li>
+                    <li>1 bunch Basil, chiffonaded</li>
+                </ul>
+            </div>
+            <div class="Directions">
+                <h2>Directions</h2>
+                <ol>
+                    <li>Preheat the oven to 450 degrees F.</li>
+                    <li>Arrange the tomatoes on a sheet pan, cut side up, in a single layer. Drizzle with olive oil
+                        and balsamic vinegar. Sprinkle the garlic, sugar, salt and pepper over the tomatoes. Roast
+                        for 25 to 30 minutes, until the tomatoes are concentrated and begin to caramelize.</li>
+                    <li>Roll pizza dough into two large rectangle and place on two greased ¼ sheet pans.</li>
+                    <li>Break up the roasted tomatoes to make a chunky sauce and spread over the top of each
+                        dough.</li>
+                    <li>Sprinkle evenly with the fresh mozzarella.</li>
+                    <li>Bake, rotating baking pans as needed, until the bottom crust is light brown.</li>
+                    <li>Remove from the oven and wearing gloves, generously sprinkle with chiffonade of basil.</li>
+                    <li>Let cool slightly and slice into rectangles for serving.</li>
+                </ol>
+            </div>
         </div>
     </div>
 </body>
